Perkin-UAT/force-app/main/default/objects/Management_Forecast__c/Management_Forecast__c.object-meta.xml
<CustomObject>
    <label>Management Forecast</label>
    <nameField>
        <label>Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Management Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>