Perkin-UAT/force-app/main/default/objects/Management_Forecast__c/fields/AOP__c.field-meta.xml
<CustomField>
    <fullName>AOP__c</fullName>
    <label>AOP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>